--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -82,7 +82,7 @@
                 android:background="@drawable/grey_background"
                 android:ems="10"
                 android:hint="Nhập tên hiển thị"
-                android:inputType="text"
+                android:inputType="textPersonName"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 android:textColor="@color/white"
@@ -105,7 +105,7 @@
                 android:background="@drawable/grey_background"
                 android:ems="10"
                 android:hint="Nhập địa chỉ"
-                android:inputType="text|textMultiLine"
+                android:inputType="textPostalAddress|textMultiLine"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 android:paddingTop="10dp"
