--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -265,7 +265,7 @@ onions."
                 android:paddingStart="16dp"
                 android:text="Thêm vào giỏ hàng"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
