--- a/app/src/main/res/layout/viewholder_best_food.xml
+++ b/app/src/main/res/layout/viewholder_best_food.xml
@@ -50,14 +50,15 @@
                 android:id="@+id/priceTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="20dp"
                 android:text="$0"
-                android:textStyle="bold"
                 android:textColor="#F93C64"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/titleTxt"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/titleTxt" />
+                app:layout_constraintTop_toTopOf="@+id/titleTxt"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/starTxt"
